<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.karen.semana3.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:elevation="2dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aula_sobre_button"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btnButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnButton" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:elevation="2dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aula_sobre_textview"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btnTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btntextview" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:elevation="2dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aula_sobre_edittext"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btnEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnEditText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:elevation="2dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aula_sobre_checkbox"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btnCheckbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnCheckbox" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:elevation="2dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aula_sobre_radiobutton"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btnRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnRadiobutton" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:elevation="2dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aula_sobre_spinner"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btnSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnSpinner" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:elevation="2dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aula_sobre_listview"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btnListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnListview" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
